--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
+<html>
+<head>
+<style>
+h1 {text-align: center;}
+h2 {text-align: center;}
+p {text-align: center;}
+</style>
+</head>
+<body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <h1>@a.week.in.the.life</h1>
 
-<img src="cindy.jpeg" alt="a Taiwanese-American woman with lightly wavy hair smiles at the camera as she takes a selfie" height="200">
+<p><img src="cindy.jpeg" alt="a Taiwanese-American woman with lightly wavy hair smiles at the camera as she takes a selfie" style="max-width:50%;height:auto"></p>
 
 <p>hi, I'm Cindy! taiwanese-american, planner and stationery afficianado, and bookworm. i'm a linguist by training and software engineer by trade... but not the front end kind 🙃 anyways, here are other places to find me on the internet!</p>
 
 <h2><a href="https://www.youtube.com/@a_week_in_the_life">YouTube</a></h2>
 
 <h2><a href="https://app.thestorygraph.com/profile/aweekinthelife">StoryGraph</a></h2>
+</html>
