--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
-<html>
-<head>
-<style>
-h1 {text-align: center;}
-h2 {text-align: center;}
-p {text-align: center;}
-</style>
-</head>
-<body>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>@a.week.in.the.life</title>
+    <link rel="icon" href="./assets/images/favicon-16x16.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <main>
 
-<h1>@a.week.in.the.life</h1>
+      <img
+        src="assets/images/cindy.jpeg"
+        alt="a Taiwanese-American woman with lightly wavy hair smiles at the camera as she takes a selfie"
+        class="profile-image"
+      />
 
-<p><img src="cindy.jpeg" alt="a Taiwanese-American woman with lightly wavy hair smiles at the camera as she takes a selfie" style="max-width:50%;height:auto"></p>
+      <h1>@a.week.in.the.life</h1>
 
-<p>hi, I'm Cindy! taiwanese-american, planner and stationery afficianado, and bookworm. i'm a linguist by training and software engineer by trade... but not the front end kind 🙃 anyways, here are other places to find me on the internet!</p>
+      <p class="description">
+        🦥 hi, I'm Cindy! taiwanese-american, planner and stationery aficionado, and
+        bookworm. i'm a linguist by training and software engineer by trade...
+        but not the front end kind 🙃 anyways, here are other places to find me on
+        the internet!
+      </p>
 
-<h2><a href="https://www.youtube.com/@a_week_in_the_life">YouTube</a></h2>
-
-<h2><a href="https://app.thestorygraph.com/profile/aweekinthelife">StoryGraph</a></h2>
+      <div class="links-list">
+        <a class="links-list__link" href="https://www.youtube.com/@a_week_in_the_life" target="_blank">YouTube</a>
+        <a class="links-list__link" href="https://app.thestorygraph.com/profile/aweekinthelife" target="_blank">StoryGraph</a>
+      </div>
+    </main>
+  </body>
 </html>
