--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 
       <p class="description">
         🦥 hi, I'm Cindy! taiwanese-american, planner and stationery aficionado, and
-        bookworm. i'm a linguist by training and software engineer by trade...
-        but not the front end kind 🙃 anyways, here are other places to find me on
-        the internet!
+        bookworm. i'm a linguist by training and software engineer by trade working to 
+        merge these two interests by studyig computational linguistics.
+        
+        i post most regularly on instagram, but here are other places to find me on the internet!
       </p>
 
       <div class="links-list">
