--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
 
       <p class="description">
         🦥 hi, I'm Cindy! taiwanese-american, planner and stationery aficionado, and
-        bookworm. i'm a linguist by training and software engineer by trade working to 
-        merge these two interests by studying computational linguistics.
+        bookworm. i'm a linguist by schooling and software engineer by trade working to 
+        merge these two interests by studyig computational linguistics.
         
         i post most regularly on instagram, but here are other places to find me on the internet!
       </p>
 
       <div class="links-list">
+        <h2>social</h2>
         <a class="links-list__link" href="https://www.youtube.com/@a_week_in_the_life" target="_blank">YouTube</a>
         <a class="links-list__link" href="https://app.thestorygraph.com/profile/aweekinthelife" target="_blank">StoryGraph</a>
+
+        <h2>affiliate links</h2>
+        <a class="links-list__link" href="https://www.peakdesign.com/?rfsn=2792309.9bae0f&utm_source=2792309&utm_medium=affiliate" target="_blank">Peak Designs</a>
+        <a class="links-list__link" href="http://rwrd.io/zbqg4um?c" target="_blank">Girlfriend Collective 30% off $95+</a>
       </div>
+
     </main>
   </body>
 </html>
