update peak designs link for new program

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="links-list__link" href="https://app.thestorygraph.com/profile/aweekinthelife" target="_blank">StoryGraph</a>
 
         <h2>affiliate links</h2>
-        <a class="links-list__link" href="https://www.peakdesign.com/?rfsn=2792309.9bae0f&utm_source=2792309&utm_medium=affiliate" target="_blank">Peak Designs</a>
+        <a class="links-list__link" href="https://peak-design.pxf.io/ZQboNg" target="_blank">Peak Designs</a>
         <a class="links-list__link" href="http://rwrd.io/zbqg4um?c" target="_blank">Girlfriend Collective 30% off $95+</a>
       </div>
 
