--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h2>affiliate links</h2>
         <a class="links-list__link" href="https://peak-design.pxf.io/ZQboNg" target="_blank">Peak Designs</a>
         <a class="links-list__link" href="http://rwrd.io/zbqg4um?c" target="_blank">Girlfriend Collective 30% off $95+</a>
+        <a class="links-list__link" href="https://www.artofbeauty.com/rd/05A14C78" target="_blank">Zoya Nail Polish</a>
       </div>
 
     </main>
