--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a class="links-list__link" href="https://app.thestorygraph.com/profile/aweekinthelife" target="_blank">StoryGraph</a>
 
         <h2>affiliate links</h2>
+        <a class="links-list__link" href="https://share.keepyourcadence.com/adventuresoftwosuitcases" target="_blank">Cadence Capsules $15 off $75+</a>        
         <a class="links-list__link" href="https://peak-design.pxf.io/ZQboNg" target="_blank">Peak Designs</a>
         <a class="links-list__link" href="http://rwrd.io/zbqg4um?c" target="_blank">Girlfriend Collective 30% off $95+</a>
         <a class="links-list__link" href="https://www.artofbeauty.com/rd/05A14C78" target="_blank">Zoya Nail Polish</a>
