add book wishlists

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <a class="links-list__link" href="https://www.youtube.com/@a_week_in_the_life" target="_blank">YouTube</a>
         <a class="links-list__link" href="https://app.thestorygraph.com/profile/aweekinthelife" target="_blank">StoryGraph</a>
 
+        <h2>book wishlist</h2>
+        <a class="links-list__link" href="https://bookshop.org/wishlists/85d86a40b1cb287719acfd0d1a1a4a669b3c24c9" target="_blank">Bookshop</a>
+        <a class="links-list__link" href="https://app.thestorygraph.com/tags/26a90f5d-69a6-46a4-a8b4-ce1c11f1d80e" target="_blank">StoryGraph</a>
+
         <h2>affiliate links</h2>
         <a class="links-list__link" href="https://share.keepyourcadence.com/adventuresoftwosuitcases" target="_blank">Cadence Capsules $15 off $75+</a>        
         <a class="links-list__link" href="https://peak-design.pxf.io/ZQboNg" target="_blank">Peak Designs</a>
