--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="description">
         🦥 hi, I'm Cindy! taiwanese-american, planner and stationery aficionado, and
         bookworm. i'm a linguist by schooling and software engineer by trade working to 
-        merge these two interests by studyig computational linguistics.
+        merge these two interests by studying computational linguistics.
         
         i post most regularly on instagram, but here are other places to find me on the internet!
       </p>
