--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <a class="links-list__link" href="https://bookshop.org/wishlists/85d86a40b1cb287719acfd0d1a1a4a669b3c24c9" target="_blank">Bookshop</a>
         <a class="links-list__link" href="https://app.thestorygraph.com/tags/26a90f5d-69a6-46a4-a8b4-ce1c11f1d80e" target="_blank">StoryGraph</a>
 
-        <h2>affiliate links</h2>
+        <h2>referral links</h2>
+        <a class="links-list__link" href="https://fbuy.io/getaway/cindy273" target="_blank">Getaway House $25 off</a>        
         <a class="links-list__link" href="https://share.keepyourcadence.com/adventuresoftwosuitcases" target="_blank">Cadence Capsules $15 off $75+</a>        
         <a class="links-list__link" href="https://peak-design.pxf.io/ZQboNg" target="_blank">Peak Designs</a>
         <a class="links-list__link" href="http://rwrd.io/zbqg4um?c" target="_blank">Girlfriend Collective 30% off $95+</a>
