--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
         <a class="links-list__link" href="https://app.thestorygraph.com/tags/26a90f5d-69a6-46a4-a8b4-ce1c11f1d80e" target="_blank">StoryGraph</a>
 
         <h2>referral links</h2>
-        <a class="links-list__link" href="https://libro.fm/referral?rf_code=lfm407964" target="_blank">Libro.fm (Audiobooks!)</a>        
-        <a class="links-list__link" href="https://fbuy.io/getaway/cindy273" target="_blank">Getaway House $25 off</a>        
-        <a class="links-list__link" href="https://share.keepyourcadence.com/adventuresoftwosuitcases" target="_blank">Cadence Capsules $15 off $75+</a>        
+        <a class="links-list__link" href="https://s.ecoo.app/1UVQOF" target="_blank">Take A Note (30NT aka $1 USD off)</a>        
         <a class="links-list__link" href="https://peak-design.pxf.io/ZQboNg" target="_blank">Peak Designs</a>
-        <a class="links-list__link" href="http://rwrd.io/zbqg4um?c" target="_blank">Girlfriend Collective 30% off $95+</a>
-        <a class="links-list__link" href="https://www.artofbeauty.com/rd/05A14C78" target="_blank">Zoya Nail Polish</a>
       </div>
 
     </main>
