--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h2>social</h2>
         <a class="links-list__link" href="https://www.youtube.com/@a_week_in_the_life" target="_blank">YouTube</a>
         <a class="links-list__link" href="https://app.thestorygraph.com/profile/aweekinthelife" target="_blank">StoryGraph</a>
+        <a class="links-list__link" href="https://bsky.app/profile/aweekinthelife.bsky.social" target="_blank">Bluesky</a>
 
         <h2>referral links</h2>
         <a class="links-list__link" href="https://s.ecoo.app/1UVQOF" target="_blank">Take A Note (30NT aka $1 USD off)</a>        
